--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">Counter: <span id="counter"></span></h5>
-      <button class="btn btn-primary" id="add">+add</button>
+      <button class="btn btn-success" id="add">+add</button>
       <button class="btn btn-danger" id="sub">-sub</button>
     </div>
   </div>
